force-app/main/default/objects/Site_Pricebook__mdt/Site_Pricebook__mdt.object-meta.xml
<CustomObject>
    <description>Maps Odoo site code to Salesforce Pricebook2 record ID. F-14 reads this to auto-assign Pricebook2Id on Quote creation. Pricebook2 IDs are environment-specific - Rev Ops must update after each deployment.</description>
    <label>Site Pricebook</label>
    <pluralLabel>Site Pricebooks</pluralLabel>
</CustomObject>