force-app/main/default/objects/Site_Pricebook__mdt/fields/Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Id__c</fullName>
    <description>Salesforce Pricebook2 record ID. Must be updated per environment (Sandbox != Production).</description>
    <label>Pricebook ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>