force-app/main/default/objects/Site_Pricebook__mdt/fields/Primary_Currency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Currency__c</fullName>
    <description>BAN billing currency for reference. e.g. JPY, KRW, IDR, PHP. Informational — all SF pricing is USD.</description>
    <label>Primary Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>