force-app/main/default/objects/Site_Pricebook__mdt/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <description>Odoo site code exactly. e.g. TYO1, SEL1, JKT1. NOT the SF country code.</description>
    <label>Odoo Site Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>